# vision-computer-mcp

./: .gitignore  README.md  pyproject.toml
computer_use_mcp/: __main__.py  config.py  debug.py  executor.py  keys.py  models.py  monitor.py  platform.py  platform_base.py  platform_macos.py  platform_windows.py  server.py  state_manager.py
tests/: test_config.py  test_executor_mapping.py  test_models.py  test_state_manager.py
